Bump felles 0.8.14 med Saksnummer Object + sonar rettinger